# vcard

./: .gitignore  Cargo.toml  LICENSE  README.md  perform_test_coverage.ps1
playground/src/: main.rs
src/: lib.rs  rfc6530.rs
test_suite/: Cargo.toml
test_suite/tests/: test_example.rs  test_params.rs  test_property.rs  test_utils.rs  test_values.rs  test_vcard.rs
tests/: rfc6350_test.rs
vcard/: Cargo.toml
vcard/src/: common.rs  lib.rs  rfc6350.rs  utils.rs
vcard/src/rfc6350/: parameters.rs  properties.rs  values.rs
vcard/src/rfc6350/parameters/: language.rs  media.rs  prefer.rs  value.rs  vc_types.rs
vcard/src/rfc6350/properties/: adr.rs  anniversary.rs  birthday.rs  category.rs  email.rs  full_name.rs  gender.rs  lang.rs  logo.rs  name.rs  nickname.rs  note.rs  org.rs  photo.rs  rev.rs  role.rs  sound.rs  source.rs  tel.rs  title.rs  url.rs  x.rs
vcard/src/rfc6350/values/: adr.rs  anniversary.rs  birthday.rs  category.rs  email.rs  full_name.rs  gender.rs  lang.rs  logo.rs  name.rs  nickname.rs  note.rs  org.rs  photo.rs  rev.rs  role.rs  sound.rs  source.rs  tel.rs  title.rs  url.rs  x.rs
vcard_derive/: Cargo.toml
vcard_derive/src/: lib.rs
