[package]
name = "vcard"
version = "0.1.0"
authors = ["VyNT <vyngt@outlook.com>"]
description = "Simple vCard library will help you generate vCard"
keywords = ["vcard", "rfc6350"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
mime = "0.3.17"
vcard_derive = {path = "../vcard_derive"}
