[package]
name = "sp_vcard"
version = "0.2.0"
authors = ["VyNT <vyngt@outlook.com>"]
description = "Simple vCard library will help you generate vCard"
keywords = ["vcard", "rfc6350"]
edition = "2021"
license = "MIT"
repository = "https://github.com/vyngt/vcard"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.4"
chrono = "0.4.31"
sp_vcard_derive = {version = "0", path = "../vcard_derive"}
