[package]
name = "vcard_derive"
version = "0.1.0"
authors = ["VyNT <vyngt@outlook.com>"]
keywords = ["vcard", "derive"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "vcard_derive"
proc-macro = true

[dependencies]
quote = "1.0.33"
syn = {version = "2.0.37", features=["full"]}
