[package]
name = "sp_vcard_derive"
version = "0.2.0"
authors = ["VyNT <vyngt@outlook.com>"]
description = "just macro for sp_vcard"
keywords = ["vcard", "derive"]
edition = "2021"
license = "MIT"
repository = "https://github.com/vyngt/vcard"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sp_vcard_derive"
proc-macro = true

[dependencies]
quote = "1.0.33"
syn = {version = "2.0.37", features=["full"]}
